fix intro overflow bug

--- a/src/pages/game/intro/index.less
+++ b/src/pages/game/intro/index.less
@@ -1,7 +1,7 @@
 @import url('../../../settings/config.less');
 
 .Intro {
-	@apply w-full h-full py-20 overflow-hidden;
+	@apply w-full h-full py-20;
 
 	.icon0 {
 		&::before {
@@ -192,5 +192,11 @@
 				}
 			}
 		}
+	}
+}
+
+@media only screen and (max-width: @MD) {
+	.Intro {
+		@apply overflow-hidden;
 	}
 }
